--- a/archives/toutiao-search/2023-11-21.md
+++ b/archives/toutiao-search/2023-11-21.md
@@ -1,59 +1,81 @@
 # 2023-11-21
 
-共 275 条
+共 294 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 21 2023 18:04:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 21 2023 19:00:42 GMT+0800 (China Standard Time) -->
+1. [韩国男足称要零封国足](https://so.toutiao.com/search?keyword=韩国男足称要零封国足)
 1. [警方回应奔驰女踹倒路障辱骂工人](https://so.toutiao.com/search?keyword=警方回应奔驰女踹倒路障辱骂工人)
-1. [六公主播《长津湖之水门桥》](https://so.toutiao.com/search?keyword=六公主播《长津湖之水门桥》)
 1. [运20起飞赴韩接英雄回家](https://so.toutiao.com/search?keyword=运20起飞赴韩接英雄回家)
-1. [物价一直下跌是好事吗](https://so.toutiao.com/search?keyword=物价一直下跌是好事吗)
-1. [白敬亭方辟谣嫖娼被抓](https://so.toutiao.com/search?keyword=白敬亭方辟谣嫖娼被抓)
-1. [缅北向我方移交电诈嫌犯3.1万名](https://so.toutiao.com/search?keyword=缅北向我方移交电诈嫌犯3.1万名)
+1. [国足vs韩国最新赔率：国足胜11](https://so.toutiao.com/search?keyword=国足vs韩国最新赔率：国足胜11)
+1. [国足vs韩国](https://so.toutiao.com/search?keyword=国足vs韩国)
 1. [电视家宣布暂停服务](https://so.toutiao.com/search?keyword=电视家宣布暂停服务)
-1. [直击东部战区实弹演练现场高燃画面](https://so.toutiao.com/search?keyword=直击东部战区实弹演练现场高燃画面)
-1. [酷派手机拥抱鸿蒙](https://so.toutiao.com/search?keyword=酷派手机拥抱鸿蒙)
+1. [白敬亭方辟谣嫖娼被抓](https://so.toutiao.com/search?keyword=白敬亭方辟谣嫖娼被抓)
+1. [巴西19岁醉酒女子遭流浪汉性侵](https://so.toutiao.com/search?keyword=巴西19岁醉酒女子遭流浪汉性侵)
+1. [为何“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=为何“桂花牌”手表突然爆火)
 1. [两中学生被迷晕带走？警方辟谣](https://so.toutiao.com/search?keyword=两中学生被迷晕带走？警方辟谣)
 1. [向佐晒李连杰近照](https://so.toutiao.com/search?keyword=向佐晒李连杰近照)
-1. [警方辟谣白敬亭嫖娼](https://so.toutiao.com/search?keyword=警方辟谣白敬亭嫖娼)
-1. [寒潮大风暴雪三警齐发](https://so.toutiao.com/search?keyword=寒潮大风暴雪三警齐发)
+1. [缅北向我方移交电诈嫌犯3.1万名](https://so.toutiao.com/search?keyword=缅北向我方移交电诈嫌犯3.1万名)
+1. [国内油价四连降！加满一箱省13.5元](https://so.toutiao.com/search?keyword=国内油价四连降！加满一箱省13.5元)
+1. [“70后”女内鬼马凤霞被双开](https://so.toutiao.com/search?keyword=“70后”女内鬼马凤霞被双开)
 1. [曾志伟回应为缅北电诈头目拍片庆生](https://so.toutiao.com/search?keyword=曾志伟回应为缅北电诈头目拍片庆生)
-1. [国足vs韩国最新赔率：国足胜11](https://so.toutiao.com/search?keyword=国足vs韩国最新赔率：国足胜11)
-1. [追尾轿车坠湖的摩托车手为18岁男性](https://so.toutiao.com/search?keyword=追尾轿车坠湖的摩托车手为18岁男性)
-1. [中方回应米莱当选阿根廷总统](https://so.toutiao.com/search?keyword=中方回应米莱当选阿根廷总统)
+1. [江苏省委原副书记张敬华被判14年](https://so.toutiao.com/search?keyword=江苏省委原副书记张敬华被判14年)
+1. [物价一直下跌是好事吗](https://so.toutiao.com/search?keyword=物价一直下跌是好事吗)
 1. [甘婷婷新片尺度引争议](https://so.toutiao.com/search?keyword=甘婷婷新片尺度引争议)
-1. [洪秀柱办公室副主任游颢参选](https://so.toutiao.com/search?keyword=洪秀柱办公室副主任游颢参选)
-1. [麻省理工学院确认一中国博士生身亡](https://so.toutiao.com/search?keyword=麻省理工学院确认一中国博士生身亡)
+1. [男子十几年只喝饮料确诊肝癌晚期](https://so.toutiao.com/search?keyword=男子十几年只喝饮料确诊肝癌晚期)
+1. [寒潮大风暴雪三警齐发](https://so.toutiao.com/search?keyword=寒潮大风暴雪三警齐发)
 1. [曝以色列与哈马斯接近达成放人协议](https://so.toutiao.com/search?keyword=曝以色列与哈马斯接近达成放人协议)
+1. [麻省理工学院确认一中国博士生身亡](https://so.toutiao.com/search?keyword=麻省理工学院确认一中国博士生身亡)
+1. [15岁少女坠亡 涉事KTV被刑事立案](https://so.toutiao.com/search?keyword=15岁少女坠亡+涉事KTV被刑事立案)
+1. [以军加沙行动中发生多起误伤事件](https://so.toutiao.com/search?keyword=以军加沙行动中发生多起误伤事件)
+1. [柳州高中男生当街捅伤高中女生](https://so.toutiao.com/search?keyword=柳州高中男生当街捅伤高中女生)
+1. [卡桑旅称向以色列发射火箭弹](https://so.toutiao.com/search?keyword=卡桑旅称向以色列发射火箭弹)
+1. [普尔记错规则反而责怪裁判](https://so.toutiao.com/search?keyword=普尔记错规则反而责怪裁判)
+1. [中方回应米莱当选阿根廷总统](https://so.toutiao.com/search?keyword=中方回应米莱当选阿根廷总统)
+1. [韩国队总身价是中国队的17倍](https://so.toutiao.com/search?keyword=韩国队总身价是中国队的17倍)
+1. [天津一儿童医院急诊科挂号排3000多](https://so.toutiao.com/search?keyword=天津一儿童医院急诊科挂号排3000多)
+1. [台名嘴谈台媒曝美军援千挺机枪抵台](https://so.toutiao.com/search?keyword=台名嘴谈台媒曝美军援千挺机枪抵台)
+1. [糖尿病前期如何逆转](https://so.toutiao.com/search?keyword=糖尿病前期如何逆转)
+1. [临沂警方通报“女子被前夫殴打”](https://so.toutiao.com/search?keyword=临沂警方通报“女子被前夫殴打”)
+1. [追尾轿车坠湖的摩托车手为18岁男性](https://so.toutiao.com/search?keyword=追尾轿车坠湖的摩托车手为18岁男性)
+1. [王涛称中国球迷接机韩国队无法理解](https://so.toutiao.com/search?keyword=王涛称中国球迷接机韩国队无法理解)
+1. [特斯拉一股东提议董事会停职马斯克](https://so.toutiao.com/search?keyword=特斯拉一股东提议董事会停职马斯克)
+1. [媒体评加间谍内讧：欠中国一个道歉](https://so.toutiao.com/search?keyword=媒体评加间谍内讧：欠中国一个道歉)
+1. [警方辟谣白敬亭嫖娼](https://so.toutiao.com/search?keyword=警方辟谣白敬亭嫖娼)
+1. [莫言说于和伟长得普通](https://so.toutiao.com/search?keyword=莫言说于和伟长得普通)
+1. [心梗发作前有哪些典型症状](https://so.toutiao.com/search?keyword=心梗发作前有哪些典型症状)
+1. [马斯克诉“美国媒体事务”篡改图像](https://so.toutiao.com/search?keyword=马斯克诉“美国媒体事务”篡改图像)
+1. [人民币汇率创近四个月新高](https://so.toutiao.com/search?keyword=人民币汇率创近四个月新高)
+1. [马航MH370事件家属：不同意免责领赔偿](https://so.toutiao.com/search?keyword=马航MH370事件家属：不同意免责领赔偿)
+1. [港警出动近2000人一连3天大扫黑](https://so.toutiao.com/search?keyword=港警出动近2000人一连3天大扫黑)
+1. [残疾男子贴小广告被物业在脸上涂鸦](https://so.toutiao.com/search?keyword=残疾男子贴小广告被物业在脸上涂鸦)
+1. [俄乌在多方向进行多次战斗](https://so.toutiao.com/search?keyword=俄乌在多方向进行多次战斗)
+1. [深圳一女子买菜遇到“辣椒刺客”](https://so.toutiao.com/search?keyword=深圳一女子买菜遇到“辣椒刺客”)
+1. [大小S感谢司法还她们清白](https://so.toutiao.com/search?keyword=大小S感谢司法还她们清白)
+1. [京东方辟谣被三星电子踢出供应链](https://so.toutiao.com/search?keyword=京东方辟谣被三星电子踢出供应链)
+1. [特朗普：若当选将废除印太经济框架](https://so.toutiao.com/search?keyword=特朗普：若当选将废除印太经济框架)
+1. [六公主播《长津湖之水门桥》](https://so.toutiao.com/search?keyword=六公主播《长津湖之水门桥》)
+1. [直击东部战区实弹演练现场高燃画面](https://so.toutiao.com/search?keyword=直击东部战区实弹演练现场高燃画面)
+1. [酷派手机拥抱鸿蒙](https://so.toutiao.com/search?keyword=酷派手机拥抱鸿蒙)
+1. [洪秀柱办公室副主任游颢参选](https://so.toutiao.com/search?keyword=洪秀柱办公室副主任游颢参选)
 1. [华为称未来将为三个独立的操作系统](https://so.toutiao.com/search?keyword=华为称未来将为三个独立的操作系统)
 1. [女孩回应街边拍视频被打脸](https://so.toutiao.com/search?keyword=女孩回应街边拍视频被打脸)
 1. [美媒：以军攻击希法医院后果难料](https://so.toutiao.com/search?keyword=美媒：以军攻击希法医院后果难料)
 1. [可可西里管理处回应胡歌刘涛争论](https://so.toutiao.com/search?keyword=可可西里管理处回应胡歌刘涛争论)
 1. [腹泻以为是胃病结果是心梗](https://so.toutiao.com/search?keyword=腹泻以为是胃病结果是心梗)
 1. [巴以冲突间隙 孩子们寻得一片乐园](https://so.toutiao.com/search?keyword=巴以冲突间隙+孩子们寻得一片乐园)
-1. [柳州高中男生当街捅伤高中女生](https://so.toutiao.com/search?keyword=柳州高中男生当街捅伤高中女生)
 1. [班主任当家长面殴打学生？教育局回应](https://so.toutiao.com/search?keyword=班主任当家长面殴打学生？教育局回应)
 1. [美议员敦促拜登促使以援助加沙平民](https://so.toutiao.com/search?keyword=美议员敦促拜登促使以援助加沙平民)
 1. [威少谈打替补：最终目标是赢球](https://so.toutiao.com/search?keyword=威少谈打替补：最终目标是赢球)
-1. [王涛称中国球迷接机韩国队无法理解](https://so.toutiao.com/search?keyword=王涛称中国球迷接机韩国队无法理解)
 1. [加拿大谴责以色列极端主义定居者](https://so.toutiao.com/search?keyword=加拿大谴责以色列极端主义定居者)
-1. [特朗普：若当选将废除印太经济框架](https://so.toutiao.com/search?keyword=特朗普：若当选将废除印太经济框架)
-1. [为何“桂花牌”手表突然爆火](https://so.toutiao.com/search?keyword=为何“桂花牌”手表突然爆火)
 1. [哈马斯以色列停火协议细节：为期5天](https://so.toutiao.com/search?keyword=哈马斯以色列停火协议细节：为期5天)
-1. [人民币汇率创近四个月新高](https://so.toutiao.com/search?keyword=人民币汇率创近四个月新高)
-1. [深圳一女子买菜遇到“辣椒刺客”](https://so.toutiao.com/search?keyword=深圳一女子买菜遇到“辣椒刺客”)
-1. [大小S感谢司法还她们清白](https://so.toutiao.com/search?keyword=大小S感谢司法还她们清白)
 1. [媒体：多聚焦电影艺术本身进行讨论](https://so.toutiao.com/search?keyword=媒体：多聚焦电影艺术本身进行讨论)
 1. [媒体人：火箭加州之旅三连败](https://so.toutiao.com/search?keyword=媒体人：火箭加州之旅三连败)
 1. [女主播讲述被“人肉开盒”经历](https://so.toutiao.com/search?keyword=女主播讲述被“人肉开盒”经历)
 1. [超六成受访者呼吁破除第一学历限制](https://so.toutiao.com/search?keyword=超六成受访者呼吁破除第一学历限制)
-1. [天津一儿童医院急诊科挂号排3000多](https://so.toutiao.com/search?keyword=天津一儿童医院急诊科挂号排3000多)
 1. [海南舰舰长回忆台风中跟监外舰经历](https://so.toutiao.com/search?keyword=海南舰舰长回忆台风中跟监外舰经历)
 1. [曝华为nova 12下周发布](https://so.toutiao.com/search?keyword=曝华为nova+12下周发布)
-1. [“70后”女内鬼马凤霞被双开](https://so.toutiao.com/search?keyword=“70后”女内鬼马凤霞被双开)
 1. [阿根廷“特朗普”当选会影响经济吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选会影响经济吗)
-1. [莫言说于和伟长得普通](https://so.toutiao.com/search?keyword=莫言说于和伟长得普通)
-1. [男子十几年只喝饮料确诊肝癌晚期](https://so.toutiao.com/search?keyword=男子十几年只喝饮料确诊肝癌晚期)
 1. [阿根廷“特朗普”当选是拉美大乱征兆吗](https://so.toutiao.com/search?keyword=阿根廷“特朗普”当选是拉美大乱征兆吗)
 1. [男子10亩香菜长太高免费送村民](https://so.toutiao.com/search?keyword=男子10亩香菜长太高免费送村民)
 1. [马航MH370消失近十年 四大谜团待解](https://so.toutiao.com/search?keyword=马航MH370消失近十年+四大谜团待解)
@@ -76,14 +98,12 @@
 1. [退休姥爷辅导孙女作业被网友蹭课](https://so.toutiao.com/search?keyword=退休姥爷辅导孙女作业被网友蹭课)
 1. [张桂梅对贫困学生说安心读书我供你](https://so.toutiao.com/search?keyword=张桂梅对贫困学生说安心读书我供你)
 1. [香港535名拒宣誓政府雇员已离职](https://so.toutiao.com/search?keyword=香港535名拒宣誓政府雇员已离职)
-1. [媒体评加间谍内讧：欠中国一个道歉](https://so.toutiao.com/search?keyword=媒体评加间谍内讧：欠中国一个道歉)
 1. [库里生涯总出场时间升至队史第一](https://so.toutiao.com/search?keyword=库里生涯总出场时间升至队史第一)
 1. [学生男扮女装进女寝被电晕？校方辟谣](https://so.toutiao.com/search?keyword=学生男扮女装进女寝被电晕？校方辟谣)
 1. [阿根廷新总统曾称要同中国断绝合作](https://so.toutiao.com/search?keyword=阿根廷新总统曾称要同中国断绝合作)
 1. [专家解读人民币连续暴力拉升](https://so.toutiao.com/search?keyword=专家解读人民币连续暴力拉升)
 1. [武汉洪山菜薹上市 每公斤可达999元](https://so.toutiao.com/search?keyword=武汉洪山菜薹上市+每公斤可达999元)
 1. [华为回应网传鸿蒙明年将不兼容安卓](https://so.toutiao.com/search?keyword=华为回应网传鸿蒙明年将不兼容安卓)
-1. [港警出动近2000人一连3天大扫黑](https://so.toutiao.com/search?keyword=港警出动近2000人一连3天大扫黑)
 1. [内蒙古一教师捶打学生被停职](https://so.toutiao.com/search?keyword=内蒙古一教师捶打学生被停职)
 1. [此前6连胜的火箭已遭3连败](https://so.toutiao.com/search?keyword=此前6连胜的火箭已遭3连败)
 1. [以军宣称已“重创”哈马斯](https://so.toutiao.com/search?keyword=以军宣称已“重创”哈马斯)
@@ -179,7 +199,6 @@
 1. [外资机构为中国经济投出信任票](https://so.toutiao.com/search?keyword=外资机构为中国经济投出信任票)
 1. [电视家发公告称绝对不跑路](https://so.toutiao.com/search?keyword=电视家发公告称绝对不跑路)
 1. [副部级官员降为科员9年后二次被查](https://so.toutiao.com/search?keyword=副部级官员降为科员9年后二次被查)
-1. [韩国男足称要零封国足](https://so.toutiao.com/search?keyword=韩国男足称要零封国足)
 1. [缅甸民族民主同盟军将进攻果敢老街](https://so.toutiao.com/search?keyword=缅甸民族民主同盟军将进攻果敢老街)
 1. [郭正亮预测：郭台铭恐怕选不下去了](https://so.toutiao.com/search?keyword=郭正亮预测：郭台铭恐怕选不下去了)
 1. [也门胡塞武装公布此前扣押船只画面](https://so.toutiao.com/search?keyword=也门胡塞武装公布此前扣押船只画面)
